<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_5sdp"
    android:orientation="vertical">

    <Button
        android:id="@+id/before_invite_close"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:onClick="onInviteCloseBtn"
        android:text="@string/dialog_close"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/_25sdp" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_below="@+id/before_invite_close"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/hey_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:text="@string/dialog_before_invite_awesome"
        android:textAlignment="center"
        android:textSize="@dimen/_20sdp" />

    <TextView
        android:id="@+id/invite_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/hey_tv"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingRight="@dimen/_5sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:text="@string/dialog_before_invite_invite"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_22sdp"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/invite_tv"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/_25sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/pink_round"
     >

        <Button
            android:id="@+id/before_invite_yes"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"

            android:background="@drawable/ripple_effect_round_corner_accent"
            android:onClick="onInviteYesBtn"
            android:text="@string/dialog_yes"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_25sdp" />

    </LinearLayout>

</RelativeLayout>

