<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/_15sdp"
    android:layout_marginLeft="@dimen/_7sdp"
    android:layout_marginRight="@dimen/_7sdp"
    android:layout_marginTop="@dimen/_7sdp"
    android:orientation="vertical">

    <Button
        android:id="@+id/broadcast_close_btn"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentEnd="true"
        android:background="@android:color/transparent"
        android:onClick="onBroadcastCloseBtn"
        android:text="@string/dialog_close"
        android:textColor="@color/text_grey"
        android:textSize="@dimen/_25sdp" />


    <ImageView
        android:id="@+id/megaphone"
        android:layout_width="@dimen/_55sdp"
        android:layout_height="@dimen/_55sdp"
        android:layout_below="@+id/broadcast_close_btn"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/toolbar_share" />

    <TextView
        android:id="@+id/shoutTv"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_20sdp"
        android:layout_below="@+id/megaphone"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/dialog_broadcast_tagline"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_16sdp" />


    <Button
        android:id="@+id/broadcast_yes_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_below="@+id/shoutTv"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/_30sdp"
        android:layout_marginRight="@dimen/_30sdp"
        android:layout_marginTop="24dp"
        android:background="@drawable/ripple_effect_round_corner_accent"
        android:gravity="center"
        android:onClick="onBroadcastYesBtn"
        android:text="@string/dialog_yes"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_25sdp" />


</RelativeLayout>