<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/join_community_rl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        tools:context="com.vozsays.activity.JoinTheCommunity">

        <ImageView
            android:id="@+id/act_join_logo_iv"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_24sdp"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/tag_line"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_28sdp"
            android:layout_below="@+id/act_join_logo_iv"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/_2sdp"
            android:paddingBottom="@dimen/_2sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:foregroundGravity="center"
            android:text="@string/join_community_tagline"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/_20sdp" />

        <LinearLayout
            android:id="@+id/images_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tag_line"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:paddingTop="@dimen/_10sdp"
            android:weightSum="3">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:src="@drawable/act_join_community_first_photo" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_45sdp"
                android:layout_weight="1"
                android:src="@drawable/act_join_community_second_pic" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_100sdp"
                android:layout_weight="1"
                android:src="@drawable/act_join_community_third_pic" />


        </LinearLayout>

        <TextView
            android:id="@+id/act_join_the_community_secong_tagline"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_26sdp"
            android:layout_below="@id/images_ll"
            android:layout_marginBottom="@dimen/_15sdp"
            android:gravity="center"
            android:layout_marginTop="@dimen/_70sdp"
            android:textAlignment="center"
            android:textSize="@dimen/_20sdp"
          android:text="@string/join_community_tagline2" />

        <FrameLayout
            android:id="@+id/framelayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="@dimen/_25sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:background="@drawable/pink_round_rect">

            <com.facebook.login.widget.LoginButton
                android:id="@+id/login_btn"
                android:layout_width="200sp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:layout_marginTop="27dp"
                android:gravity="center"
                android:visibility="gone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/join_community_btn_text"
                android:background="@drawable/ripple_effect_round_rect_color_accent"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_20sdp" />
        </FrameLayout>


    </RelativeLayout>
</layout>