<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<LinearLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/_22sdp"
    android:layout_marginBottom="@dimen/_10sdp"
 android:paddingRight="@dimen/_5sdp"
    android:paddingLeft="@dimen/_5sdp"
    android:background="@android:color/white">
<ImageView
    android:layout_width="wrap_content"
    android:layout_height="@dimen/_20sdp"
    android:src="@drawable/dialog_down_arrow"
    android:layout_marginLeft="@dimen/_10sdp"
    android:onClick="onDownArrow"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textColor="@color/colorAccent"
            android:text="@string/dialog_invite_tagline"/>
        <ImageView
            android:layout_width="@dimen/_30sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:src="@drawable/logo"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/dialog_invite_name"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:textAlignment="textStart"
            android:textSize="@dimen/_16sdp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:text="@string/dialog_invite"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:background="@drawable/ripple_effect_round_corner_accent"

            android:textSize="@dimen/_18sdp"
            android:textAllCaps="false"
            android:onClick="onInvite"

            />


    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_margin="3dp"
        android:background="@android:color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/dialog_invite_name"

            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:textAlignment="textStart"
            android:textSize="@dimen/_16sdp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple_effect_round_corner_accent"
            android:text="@string/dialog_invite"
            android:textSize="@dimen/_18sdp"
            android:textAllCaps="false"
            android:onClick="onInvite"

            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_margin="3dp"
        android:background="@android:color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/dialog_invite_name"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:textAlignment="textStart"
            android:textSize="@dimen/_16sdp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorAccent"
            android:background="@drawable/ripple_effect_round_corner_accent"
            android:text="@string/dialog_invite"
            android:textSize="@dimen/_18sdp"
            android:textAllCaps="false"
            android:onClick="onInvite"

            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_margin="3dp"
        android:background="@android:color/black"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/dialog_invite_name"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:textAlignment="textStart"
            android:textSize="@dimen/_16sdp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:textColor="@android:color/white"

            android:background="@drawable/ripple_effect_round_corner_accent"
            android:text="@string/dialog_invite"
            android:textSize="@dimen/_18sdp"
            android:textAllCaps="false"
            android:onClick="onInvite"

            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_margin="3dp"
        android:background="@android:color/black"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginBottom="@dimen/_5sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_25sdp"
            android:text="@string/dialog_invite_name"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/_5sdp"
            android:layout_marginRight="@dimen/_5sdp"
            android:paddingLeft="@dimen/_5sdp"
            android:textAlignment="textStart"
            android:textSize="@dimen/_16sdp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_30sdp"
            android:textColor="@android:color/white"
            android:background="@drawable/ripple_effect_round_corner_accent"
            android:text="@string/dialog_invite"
            android:textSize="@dimen/_18sdp"
            android:textAllCaps="false"
            android:onClick="onInvite"

            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.7dp"
        android:layout_margin="3dp"
        android:background="@android:color/black"
        />

    </LinearLayout></layout>
